--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="password">Password</string>
     <string name="login">Ingresar</string>
     <string name="username">Username</string>
+    <string name="sensoresTile">Sensores</string>
+    <string name="lista">Lista</string>
+    <string name="Giroscopio">Giroscopio</string>
+    <string name="Luz">Luz</string>
+    <string name="Acelerometro">Acelerometro</string>
+    <string name="listasensores">Lista</string>
+    <string name="sensores">Sensores</string>
+    <string name="griscopioTitle">Griscopio</string>
+    <string name="luzTitle">Luz</string>
 </resources>
