adds parameters views

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="password">Password</string>
     <string name="login">Ingresar</string>
     <string name="username">Username</string>
+    <string name="parameters_btn_txt">Paso de parámetros</string>
+    <string name="cars_btn_txt">Autos</string>
+    <string name="sensors_btn_txt">Sensores</string>
+    <string name="send">Enviar</string>
+    <string name="parameter_1">Parámetros 1</string>
+    <string name="parameter_2">Parámetros 2</string>
+    <string name="parameters_title">Parámetros</string>
 </resources>
